--- a/index.html
+++ b/index.html
@@ -46,6 +46,19 @@
             </div>
         </div>
     </nav>
+
+    <section class="header">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-5"></div>
+            </div>
+            <div class="col-lg-7">
+
+            </div>
+        </div>
+    </section>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
