--- a/index.html
+++ b/index.html
@@ -50,7 +50,25 @@
     <section class="header">
         <div class="container">
             <div class="row">
-                <div class="col-lg-5"></div>
+                <div class="col-lg-5" copywriting>
+                    <div class="badge">
+                        <img src="" alt="">
+                        <p>
+                            We Won 180 Secure-System Award
+                        </p>
+                    </div>
+
+                    <h1>
+                        Secure Way to <br>
+                        Make a Payment
+                    </h1>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
+                        Perferendis harum doloremque qui dolor, sed libero.
+                    </p>
+                    <a href="#" class="btn btn-primary">Get Started</a>
+                    <a href="#" class="btn btn-secondary">Read Stories</a>
+                </div>
             </div>
             <div class="col-lg-7">
 
