--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="row">
                 <div class="col-lg-5" copywriting>
                     <div class="badge">
-                        <img src="" alt="">
+                        <img src="images/icon-secure.svg" alt="">
                         <p>
                             We Won 180 Secure-System Award
                         </p>
@@ -71,7 +71,7 @@
                 </div>
             </div>
             <div class="col-lg-7">
-
+                <img src="images/banner_header.png" alt="">
             </div>
         </div>
     </section>
