--- a/index.html
+++ b/index.html
@@ -69,10 +69,11 @@
                     <a href="#" class="btn btn-primary">Get Started</a>
                     <a href="#" class="btn btn-secondary">Read Stories</a>
                 </div>
+                <div class="col-lg-7">
+                    <img src="images/banner_header.png" class="img-fluid" alt="">
+                </div>
             </div>
-            <div class="col-lg-7">
-                <img src="images/banner_header.png" alt="">
-            </div>
+
         </div>
     </section>
 
