--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
             <div class="row">
                 <div class="col-lg-5" copywriting>
                     <div class="badge">
-                        <img src="images/icon-secure.svg" alt="">
-                        <p>
+                        <img class="icon" src="images/icon-secure.svg" alt="">
+                        <p class="small-copy">
                             We Won 180 Secure-System Award
                         </p>
                     </div>
 
-                    <h1>
+                    <h1 class="big-header">
                         Secure Way to <br>
                         Make a Payment
                     </h1>
