--- a/index.html
+++ b/index.html
@@ -50,19 +50,19 @@
     <section class="header">
         <div class="container">
             <div class="row">
-                <div class="col-lg-5" copywriting>
-                    <div class="badge">
+                <div class="col-lg-5 copywriting align-self-center">
+                    <div class="badge mb-20">
                         <img class="icon" src="images/icon-secure.svg" alt="">
                         <p class="small-copy">
                             We Won 180 Secure-System Award
                         </p>
                     </div>
 
-                    <h1 class="big-header">
+                    <h1 class="big-header mb-10">
                         Secure Way to <br>
                         Make a Payment
                     </h1>
-                    <p>
+                    <p class="primary-copy mb-30">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
                         Perferendis harum doloremque qui dolor, sed libero.
                     </p>
