--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg ">
+    <nav class="navbar navbar-expand-lg shadow-sm ">
         <div class="container cashier-navbar">
             <a class="navbar-brand" href="#">Cashier</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -47,7 +47,7 @@
         </div>
     </nav>
 
-    <section class="header">
+    <section class="header mt-70">
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 copywriting align-self-center">
@@ -66,7 +66,7 @@
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
                         Perferendis harum doloremque qui dolor, sed libero.
                     </p>
-                    <a href="#" class="btn btn-primary">Get Started</a>
+                    <a href="#" class="btn btn-primary mr-10">Get Started</a>
                     <a href="#" class="btn btn-secondary">Read Stories</a>
                 </div>
                 <div class="col-lg-7">
@@ -74,6 +74,43 @@
                 </div>
             </div>
 
+        </div>
+    </section>
+
+    <section class="companies mt-70">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-lg-12">
+                    <h3 class="medium-header mb-10">
+                        Trusted By Global Leaders
+                    </h3>
+                    <p class="primary-copy mb-30">
+                        Dolor Easy Report and Transaction Growth
+                    </p>
+                </div>
+            </div>
+            <div class="carousel">
+                <div class="carousel-wrapper">
+                    <div class="card-brand">
+                        <img src="images/apple.png" class="logo" alt="">
+                    </div>
+                    <div class="card-brand">
+                        <img src="images/dunkin.png" class="logo" alt="">
+                    </div>
+                    <div class="card-brand">
+                        <img src="images/google.png" class="logo" alt="">
+                    </div>
+                    <div class="card-brand">
+                        <img src="images/spotify.png" class="logo" alt="">
+                    </div>
+                    <div class="card-brand">
+                        <img src="images/subway.png" class="logo" alt="">
+                    </div>
+                    <div class="card-brand">
+                        <img src="images/kfc.png" class="logo" alt="">
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
