--- a/index.html
+++ b/index.html
@@ -93,42 +93,84 @@
         </div>
         <div class="carousel">
             <div class="carousel-wrapper">
-                <div class="card-brand">
+                <div class="card-brand mr-30">
                     <img src="images/apple.png" class="logo" alt="">
                 </div>
-                <div class="card-brand">
+                <div class="card-brand mr-30">
                     <img src="images/dunkin.png" class="logo" alt="">
                 </div>
-                <div class="card-brand">
+                <div class="card-brand mr-30">
                     <img src="images/google.png" class="logo" alt="">
                 </div>
-                <div class="card-brand">
+                <div class="card-brand mr-30">
                     <img src="images/spotify.png" class="logo" alt="">
                 </div>
-                <div class="card-brand">
+                <div class="card-brand mr-30">
                     <img src="images/subway.png" class="logo" alt="">
                 </div>
-                <div class="card-brand">
+                <div class="card-brand mr-30">
                     <img src="images/kfc.png" class="logo" alt="">
                 </div>
             </div>
             <div class="carousel-wrapper">
-                <div class="card-brand">
+                <div class="card-brand mr-30">
                     <img src="images/apple.png" class="logo" alt="">
                 </div>
-                <div class="card-brand">
+                <div class="card-brand mr-30">
                     <img src="images/dunkin.png" class="logo" alt="">
                 </div>
-                <div class="card-brand">
+                <div class="card-brand mr-30">
                     <img src="images/google.png" class="logo" alt="">
                 </div>
-                <div class="card-brand">
+                <div class="card-brand mr-30">
                     <img src="images/spotify.png" class="logo" alt="">
                 </div>
-                <div class="card-brand">
+                <div class="card-brand mr-30">
                     <img src="images/subway.png" class="logo" alt="">
                 </div>
-                <div class="card-brand">
+                <div class="card-brand mr-30">
+                    <img src="images/kfc.png" class="logo" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="carousel-left">
+            <div class="carousel-wrapper-left">
+                <div class="card-brand mr-30">
+                    <img src="images/apple.png" class="logo" alt="">
+                </div>
+                <div class="card-brand mr-30">
+                    <img src="images/dunkin.png" class="logo" alt="">
+                </div>
+                <div class="card-brand mr-30">
+                    <img src="images/google.png" class="logo" alt="">
+                </div>
+                <div class="card-brand mr-30">
+                    <img src="images/spotify.png" class="logo" alt="">
+                </div>
+                <div class="card-brand mr-30">
+                    <img src="images/subway.png" class="logo" alt="">
+                </div>
+                <div class="card-brand mr-30">
+                    <img src="images/kfc.png" class="logo" alt="">
+                </div>
+            </div>
+            <div class="carousel-wrapper-left">
+                <div class="card-brand mr-30">
+                    <img src="images/apple.png" class="logo" alt="">
+                </div>
+                <div class="card-brand mr-30">
+                    <img src="images/dunkin.png" class="logo" alt="">
+                </div>
+                <div class="card-brand mr-30">
+                    <img src="images/google.png" class="logo" alt="">
+                </div>
+                <div class="card-brand mr-30">
+                    <img src="images/spotify.png" class="logo" alt="">
+                </div>
+                <div class="card-brand mr-30">
+                    <img src="images/subway.png" class="logo" alt="">
+                </div>
+                <div class="card-brand mr-30">
                     <img src="images/kfc.png" class="logo" alt="">
                 </div>
             </div>
