add animation brand

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </div>
 
         </div>
-        <div class="carousel">
+        <div class="carousel mb-30">
             <div class="carousel-wrapper">
                 <div class="card-brand mr-30">
                     <img src="images/apple.png" class="logo" alt="">
