--- a/index.html
+++ b/index.html
@@ -177,6 +177,45 @@
         </div>
     </section>
 
+    <section class="features mt-70">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <h3 class="medium-header mb-10">
+                        Key Features
+                    </h3>
+                    <p class="primary-copy mb-30">
+                        Reliable system growth for companies
+                    </p>
+                </div>
+                <div class="col-lg-6 text-end">
+                    <a href="" class="btn btn-secondary">View All</a>
+                </div>
+            </div>
+            <div class="row features-wrapper">
+                <div class="col-lg-7">
+                    <div class="col-lg-12">
+                        <div class="big-feature-card">
+                            <div class="icon"><img src="images/icon_gfb.png" alt=""></div>
+                            <div class="copy">
+                                <h3 class="small-header mb10">
+                                    Good for Business
+                                </h3>
+                                <p class="primary-copy mb-20">
+                                    Business lorem ipsum meet requirements without breaking the laws and reducing ipsum
+                                    tax within a couple of days. The document will be reported automatically by.
+                                </p>
+
+                                <a href="#" class="text-button">Learn More</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-5"></div>
+            </div>
+        </div>
+    </section>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
