--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg shadow-sm ">
+    <nav class="navbar navbar-expand-lg  ">
         <div class="container cashier-navbar">
             <a class="navbar-brand" href="#">Cashier</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -194,6 +194,22 @@
             </div>
             <div class="row features-wrapper">
                 <div class="col-lg-7">
+                    <div class="col-lg-12 mb-30">
+                        <div class="big-feature-card">
+                            <div class="icon"><img src="images/icon_gfb.png" alt=""></div>
+                            <div class="copy">
+                                <h3 class="small-header mb10">
+                                    Good for Business
+                                </h3>
+                                <p class="primary-copy mb-20">
+                                    Business lorem ipsum meet requirements without breaking the laws and reducing ipsum
+                                    tax within a couple of days. The document will be reported automatically by.
+                                </p>
+
+                                <a href="#" class="text-button">Learn More</a>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-lg-12">
                         <div class="big-feature-card">
                             <div class="icon"><img src="images/icon_gfb.png" alt=""></div>
