--- a/index.html
+++ b/index.html
@@ -196,7 +196,9 @@
                 <div class="col-lg-7">
                     <div class="col-lg-12 mb-30">
                         <div class="big-feature-card">
-                            <div class="icon"><img src="images/icon_gfb.png" alt=""></div>
+                            <div class="icon">
+                                <img src="images/icon_gfb.png" alt="">
+                            </div>
                             <div class="copy">
                                 <h3 class="small-header mb10">
                                     Good for Business
@@ -212,10 +214,12 @@
                     </div>
                     <div class="col-lg-12">
                         <div class="big-feature-card">
-                            <div class="icon"><img src="images/icon_gfb.png" alt=""></div>
+                            <div class="icon">
+                                <img src="images/icon_od.png" alt="">
+                            </div>
                             <div class="copy">
                                 <h3 class="small-header mb10">
-                                    Good for Business
+                                    Official Documentations
                                 </h3>
                                 <p class="primary-copy mb-20">
                                     Business lorem ipsum meet requirements without breaking the laws and reducing ipsum
@@ -227,7 +231,25 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-5"></div>
+                <div class="col-lg-5">
+                    <div class="col-lg-12">
+                        <div class="small-feature-card">
+                            <div class="icon">
+                                <img src="images/icon_a.png" alt="">
+                            </div>
+                            <div class="copy">
+                                <h3 class="small-header mb10">
+                                    Official Documentations
+                                </h3>
+                                <p class="primary-copy mb-20">
+                                    Business lorem ipsum meet requirements without breaking the laws and reducing ipsum
+                                    tax within a couple of days. The document will be reported automatically by.
+                                </p>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
