add feature card done"

--- a/index.html
+++ b/index.html
@@ -232,18 +232,52 @@
                     </div>
                 </div>
                 <div class="col-lg-5">
-                    <div class="col-lg-12">
+                    <div class="col-lg-12 mb-30">
+                        <div class="small-feature-card">
+                            <div class="icon">
+                                <img src="images/icon_nc.png" alt="">
+                            </div>
+                            <div class="copy">
+                                <h3 class="small-header mb10">
+                                    No-Code
+                                </h3>
+                                <p class="primary-copy">
+                                    Built for non tech savvy to achieve
+                                    more results in the less efforts dolor.
+                                </p>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-12 mb-30">
+                        <div class="small-feature-card">
+                            <div class="icon">
+                                <img src="images/icon_p.png" alt="">
+                            </div>
+                            <div class="copy">
+                                <h3 class="small-header mb10">
+                                    Payment
+                                </h3>
+                                <p class="primary-copy ">
+                                    Built for non tech savvy to achieve
+                                    more results in the less efforts dolor.
+                                </p>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-12 mb-30">
                         <div class="small-feature-card">
                             <div class="icon">
                                 <img src="images/icon_a.png" alt="">
                             </div>
                             <div class="copy">
                                 <h3 class="small-header mb10">
-                                    Official Documentations
+                                    Analytics
                                 </h3>
-                                <p class="primary-copy mb-20">
-                                    Business lorem ipsum meet requirements without breaking the laws and reducing ipsum
-                                    tax within a couple of days. The document will be reported automatically by.
+                                <p class="primary-copy ">
+                                    Built for non tech savvy to achieve
+                                    more results in the less efforts dolor.
                                 </p>
 
                             </div>
