--- a/index.html
+++ b/index.html
@@ -288,6 +288,35 @@
         </div>
     </section>
 
+    <section class="booking mt-70">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h3 class="medium-header mb-10">
+                        Book a Demo
+                    </h3>
+                    <p class="primary-copy mb-30">
+                        we will show you how our product amazing
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-10 offset-lg-1">
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <img src="images/ilustration-booking.png" alt="" class="img-fluid">
+                        </div>
+                        <div class="col-lg-6 booking-form">
+                            <form action="">
+
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
