make form booking

--- a/index.html
+++ b/index.html
@@ -308,7 +308,19 @@
                         </div>
                         <div class="col-lg-6 booking-form">
                             <form action="">
-
+                                <div class="mb-16">
+                                    <input placeholder="Complete Name" type="text" name="name" id=""
+                                        class="form-control">
+                                </div>
+                                <div class="mb-16">
+                                    <input placeholder="Email Address" type="email" name="email_address" id=""
+                                        class="form-control">
+                                </div>
+                                <div class="mb-16">
+                                    <select name="" id="" class="form-select">
+                                        <option value="demo">Demo Features</option>
+                                    </select>
+                                </div>
                             </form>
                         </div>
                     </div>
