make form booking

--- a/index.html
+++ b/index.html
@@ -318,7 +318,10 @@
                                 </div>
                                 <div class="mb-16">
                                     <select name="" id="" class="form-select">
-                                        <option value="demo">Demo Features</option>
+                                        <option value="0">Select your purpose</option>
+                                        <option value="Payment">Payment Integration</option>
+                                        <option value="apis">API developments</option>
+                                        <option value="sdk">SDK flutter</option>
                                     </select>
                                 </div>
                             </form>
