finish form booking

--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                         <div class="col-lg-6">
                             <img src="images/ilustration-booking.png" alt="" class="img-fluid">
                         </div>
-                        <div class="col-lg-6 booking-form">
+                        <div class="col-lg-6 booking-form align-self-center">
                             <form action="">
                                 <div class="mb-16">
                                     <input placeholder="Complete Name" type="text" name="name" id=""
@@ -324,6 +324,13 @@
                                         <option value="sdk">SDK flutter</option>
                                     </select>
                                 </div>
+
+                                <div class="mb-30">
+                                    <textarea placeholder="write your massage" name="" id="" cols="30" rows="5"
+                                        class="form-control"></textarea>
+                                </div>
+                                <button class="w-100 btn btn-primary">Get Started</button>
+
                             </form>
                         </div>
                     </div>
