--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 
 <body>
@@ -47,7 +48,7 @@
         </div>
     </nav>
 
-    <section class="header mt-70">
+    <section class="header mt-70" data-aos="fade-up" data-aos-duration="800" data-aos-easing="ease-in-out">
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 copywriting align-self-center">
@@ -69,7 +70,7 @@
                     <a href="#" class="btn btn-primary mr-10">Get Started</a>
                     <a href="#" class="btn btn-secondary">Read Stories</a>
                 </div>
-                <div class="col-lg-7">
+                <div class="col-lg-7" data-aos="flip-up" data-aos-duration="2000">
                     <img src="images/banner_header.png" class="img-fluid" alt="">
                 </div>
             </div>
@@ -80,7 +81,7 @@
     <section class="companies mt-70">
         <div class="container">
             <div class="row text-center">
-                <div class="col-lg-12">
+                <div class="col-lg-12" data-aos="fade-up" data-aos-duration="800" data-aos-easing="ease-in-out">
                     <h3 class="medium-header mb-10">
                         Trusted By Global Leaders
                     </h3>
@@ -91,7 +92,8 @@
             </div>
 
         </div>
-        <div class="carousel mb-30">
+        <div class="carousel mb-30" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300"
+            data-aos-offset="0">
             <div class="carousel-wrapper">
                 <div class="card-brand mr-30">
                     <img src="images/apple.png" class="logo" alt="">
@@ -133,7 +135,8 @@
                 </div>
             </div>
         </div>
-        <div class="carousel-left">
+        <div class="carousel-left" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300"
+            data-aos-offset="0">
             <div class="carousel-wrapper-left">
                 <div class="card-brand mr-30">
                     <img src="images/apple.png" class="logo" alt="">
@@ -195,12 +198,13 @@
             <div class="row features-wrapper">
                 <div class="col-lg-7">
                     <div class="col-lg-12 mb-30">
-                        <div class="big-feature-card">
+                        <div class="big-feature-card" data-aos="fade-right" data-aos-duration="800"
+                            data-aos-easing="ease-in-out">
                             <div class="icon">
                                 <img src="images/icon_gfb.png" alt="">
                             </div>
                             <div class="copy">
-                                <h3 class="small-header mb10">
+                                <h3 class="small-header mb-10">
                                     Good for Business
                                 </h3>
                                 <p class="primary-copy mb-20">
@@ -213,12 +217,13 @@
                         </div>
                     </div>
                     <div class="col-lg-12">
-                        <div class="big-feature-card">
+                        <div class="big-feature-card" data-aos="fade-right" data-aos-duration="800"
+                            data-aos-easing="ease-in-out">
                             <div class="icon">
                                 <img src="images/icon_od.png" alt="">
                             </div>
                             <div class="copy">
-                                <h3 class="small-header mb10">
+                                <h3 class="small-header mb-10">
                                     Official Documentations
                                 </h3>
                                 <p class="primary-copy mb-20">
@@ -233,12 +238,13 @@
                 </div>
                 <div class="col-lg-5">
                     <div class="col-lg-12 mb-30">
-                        <div class="small-feature-card">
+                        <div class="small-feature-card" data-aos="fade-up" data-aos-duration="800"
+                            data-aos-easing="ease-in-out">
                             <div class="icon">
                                 <img src="images/icon_nc.png" alt="">
                             </div>
                             <div class="copy">
-                                <h3 class="small-header mb10">
+                                <h3 class="small-header mb-10">
                                     No-Code
                                 </h3>
                                 <p class="primary-copy">
@@ -250,12 +256,13 @@
                         </div>
                     </div>
                     <div class="col-lg-12 mb-30">
-                        <div class="small-feature-card">
+                        <div class="small-feature-card" data-aos="fade-up" data-aos-duration="800"
+                            data-aos-easing="ease-in-out">
                             <div class="icon">
                                 <img src="images/icon_p.png" alt="">
                             </div>
                             <div class="copy">
-                                <h3 class="small-header mb10">
+                                <h3 class="small-header mb-10">
                                     Payment
                                 </h3>
                                 <p class="primary-copy ">
@@ -267,12 +274,13 @@
                         </div>
                     </div>
                     <div class="col-lg-12 mb-30">
-                        <div class="small-feature-card">
+                        <div class="small-feature-card" data-aos="fade-up" data-aos-duration="800"
+                            data-aos-easing="ease-in-out">
                             <div class="icon">
                                 <img src="images/icon_a.png" alt="">
                             </div>
                             <div class="copy">
-                                <h3 class="small-header mb10">
+                                <h3 class="small-header mb-10">
                                     Analytics
                                 </h3>
                                 <p class="primary-copy ">
@@ -301,22 +309,26 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-10 offset-lg-1">
+                <div class="col-lg-10 offset-lg-1" data-aos="zoom-in" data-aos-duration="800"
+                    data-aos-easing="ease-in-out">
                     <div class="row">
                         <div class="col-lg-6">
                             <img src="images/ilustration-booking.png" alt="" class="img-fluid">
                         </div>
                         <div class="col-lg-6 booking-form align-self-center">
                             <form action="">
-                                <div class="mb-16">
+                                <div class="mb-16" data-aos="fade-left" data-aos-duration="800"
+                                    data-aos-easing="ease-in-out">
                                     <input placeholder="Complete Name" type="text" name="name" id=""
                                         class="form-control">
                                 </div>
-                                <div class="mb-16">
+                                <div class="mb-16" data-aos="fade-left" data-aos-duration="800"
+                                    data-aos-easing="ease-in-out">
                                     <input placeholder="Email Address" type="email" name="email_address" id=""
                                         class="form-control">
                                 </div>
-                                <div class="mb-16">
+                                <div class="mb-16" data-aos="fade-left" data-aos-duration="800"
+                                    data-aos-easing="ease-in-out">
                                     <select name="" id="" class="form-select">
                                         <option value="0">Select your purpose</option>
                                         <option value="Payment">Payment Integration</option>
@@ -325,7 +337,8 @@
                                     </select>
                                 </div>
 
-                                <div class="mb-30">
+                                <div class="mb-30" data-aos="fade-left" data-aos-duration="800"
+                                    data-aos-easing="ease-in-out">
                                     <textarea placeholder="write your massage" name="" id="" cols="30" rows="5"
                                         class="form-control"></textarea>
                                 </div>
@@ -343,6 +356,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
