change brand name

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <nav class="navbar navbar-expand-lg  ">
         <div class="container cashier-navbar">
-            <a class="navbar-brand" href="#">Cashier</a>
+            <a class="navbar-brand" href="#">Mutu Finance</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -331,9 +331,9 @@
                                     data-aos-easing="ease-in-out">
                                     <select name="" id="" class="form-select">
                                         <option value="0">Select your purpose</option>
-                                        <option value="Payment">Payment Integration</option>
-                                        <option value="apis">API developments</option>
-                                        <option value="sdk">SDK flutter</option>
+                                        <option value="Payment">Payment</option>
+                                        <option value="apis">Top Up</option>
+                                        <option value="sdk">Transfer</option>
                                     </select>
                                 </div>
 
