add logo and change brand name

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Cashier</title>
+    <title>M-One Finance</title>
+    <link rel="shortcut icon" href="images/m-one-finance-logo.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
@@ -18,7 +19,8 @@
 <body>
     <nav class="navbar navbar-expand-lg  ">
         <div class="container cashier-navbar">
-            <a class="navbar-brand" href="#">Mutu Finance</a>
+            <img src="images/m-one-finance-logo.png" alt="">
+            <a class="navbar-brand" href="#">M1 Finance</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
